# c_float

./: README.rst
c_float/: CMakeLists.txt  c_float.c  c_float.h  c_string.c  c_string.h  todo.txt
c_float/test/: CMakeLists.txt  test_vector.c  test_vector.h  unit_test.c
docs/doxygen/: requirements.txt
docs/doxygen/sphinx_docs/: Dictionary.rst  Macros.rst  VecDictionary.rst  Vector.rst  conf.py  index.rst
scripts/Windows/: debug.bat  install.bat  static.bat
scripts/bash/: debug.sh  install.sh  static.sh
scripts/zsh/: build.zsh  compile.zsh  debug.zsh  install.zsh  static.zsh
